.kubernetes_eks_01/aws/tls/ing-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-go-account
  namespace: test-a
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/default-backend: "svc-go-account"
spec:
  ingressClassName: nginx
  rules:
    - host: go-account.architecture.caradhras.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-go-account
              port:
                number: 5000
    #- host: go-account-pv.architecture.caradhras.io
    #  http:
    #    paths:
    #    - path: /
    #      pathType: Prefix
    #      backend:
    #        service:
    #          name: svc-go-account
    #          port:
    #            number: 5000
  tls:
  - secretName: sc-ing-go-account-tls
    hosts:
      - go-account.architecture.caradhras.io
